fix(SD-73): Fix document controller, reformat code and rename clientId to personId
